Fix spacing on rtl tag-list

--- a/app/assets/stylesheets/components/_poster.scss
+++ b/app/assets/stylesheets/components/_poster.scss
@@ -30,10 +30,6 @@
   text-align: right;
 }
 
-.u-rtl .c-tag-list {
-  justify-content: flex-end;
-}
-
 .text__header {
   font-size: 0.7em;
 }
